syntax = "proto3";

import "google/api/annotations.proto";

package TheHunt;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/v1/greeter/{name}"
    };
  }
  rpc SayHello2 (HelloRequest) returns (HelloReply);
  rpc GetState (GetStateQuery) returns (GetStateResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message GetStateQuery {
  uint64 id = 1;
}

message GetStateResponse {
  repeated string items = 1;
}