syntax = "proto3";

package TheHunt.Pack;

// The greeting service definition.
service Greeter2 {
  // Sends a greeting
  rpc SayHello (HelloRequest1) returns (HelloReply2);
  rpc GetState (GetStateQuery1) returns (GetStateResponse1);
}

// The request message containing the user's name.
message HelloRequest1 {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply2 {
  string message = 1;
}

message GetStateQuery1 {
  uint64 id =1;
}

message GetStateResponse1 {
  repeated string items = 1;
}